tests/syntax_error/bad_class_name.jou
class 1:  # Error: expected a name for the class, got an integer
    bla bla
